--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.5",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
