init back app, created some utils, simple email sender, user

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://localhost:8090/moviedb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# uncomment to set no lazy initialization
+#spring.jpa.open-in-view=false
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=a
+spring.mail.password=b
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
