--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "bootstrap": "^5.3.0",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.3",
     "react-dom": "^18.2.0",
