--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=a
-spring.mail.password=b
+spring.mail.username=quad.cinema.ua@gmail.com
+spring.mail.password=gpiuqtervykwcikt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
